# nfl-data-stack

./: .coverage  .gitignore  CODEBASE_MEMORY.md  README.md  TEST_SUITE.md  TODO.md  justfile  pyproject.toml
.github/workflows/: test.yml
data/nfl/: nfl_enhanced_features.csv  nfl_results.csv  nfl_results_2025.csv  nfl_results_2025_20251109_203422.csv  nfl_results_2025_20251109_220001.csv  nfl_results_2025_20251110_110002.csv  nfl_results_historical.csv  nfl_stadiums.csv  nfl_team_ratings.csv  nfl_team_ratings_generated.csv  (+1 more)
docs/: CHANGELOG_2025-11-10.md  QUICKSTART_HISTORICAL_DATA.md  SUMMARY.md  bug_report.md  data_collection_guide.md  feature_engineering_design.md  fivethirtyeight_comparison.md  frontend_fix_required.md  linkedin_response.md  linkedin_response_v2.md  phase2_statistical_rigor.md  preseason_mean_reversion.md  statistical_methodology.md  travel_altitude_primetime_implementation.md
models/: elo_calibration.pkl
rill_project/: rill.yaml
scripts/: analyze_colts_texans.py  apply_preseason_mean_reversion.py  check_colts_texans.py  check_colts_texans_parquet.py  check_columns.py  check_display_columns.py  check_elo_ratings.py  check_ratings_columns.py  check_schedule_elos.py  check_sim_ratings.py  collect_2025_results.py  collect_enhanced_features.py  collect_espn_scores.py  collect_historical_data.py  collect_travel_and_primetime.py  deep_dive_issue.py  final_analysis.py  generate_full_webpage_data.py  generate_webpage_data.py  hourly_update.py  inspect_data.py  predict_week.py  show_calibration.py  show_elo_updates.py  show_playoff_probabilities.py  verify_webpage_data.py
tests/: __init__.py  conftest.py  dbt_test_harness.py
transform/: dbt_project.yml  elo_model_versions.yml  profiles.yml
(+74 files in other folders)
