[project]
name = "nfl-data-stack"
version = "0.1.0"
description = "NFL analytics and Monte Carlo simulator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.10.0,<1.11.0",
    "dbt-duckdb",
    "dlt[filesystem]",
    "duckdb~=1.3.0",
    "numpy",
    "pandas",
    "pyarrow",
    "shandy-sqlfmt[jinjafmt]",
    "sqlmesh==0.88",
    "polars",
    "lxml>=6.0.2",
    "html5lib>=1.1",
    "nflreadpy>=0.1.4",
    "scikit-learn>=1.7.2",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-mock>=3.12.0",
    "geopy>=2.4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["transform/dbt_packages", ".git", ".venv"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=transform/models/nfl",
    "--cov=scripts",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests for individual functions",
    "integration: Integration tests for model pipelines",
    "e2e: End-to-end tests for full pipeline",
    "slow: Tests that take significant time to run",
]
